src/expr/snapshots/datafusion_delta_sharing__expr__test__and_op_from_expr.snap
---
source: src/expr/mod.rs
expression: parsed_op
---
{
  "op": "and",
  "children": [
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "hireDate",
          "valueType": "date"
        },
        {
          "op": "literal",
          "value": "2021-04-29",
          "valueType": "date"
        }
      ]
    },
    {
      "op": "lessThan",
      "children": [
        {
          "op": "column",
          "name": "id",
          "valueType": "int"
        },
        {
          "op": "literal",
          "value": "25",
          "valueType": "int"
        }
      ]
    }
  ]
}
