src/expr/snapshots/datafusion_delta_sharing__expr__test__equal_op_from_expr.snap
---
source: src/expr/mod.rs
expression: parsed_op
---
{
  "op": "equal",
  "children": [
    {
      "op": "column",
      "name": "hireDate",
      "valueType": "date"
    },
    {
      "op": "literal",
      "value": "2021-04-29",
      "valueType": "date"
    }
  ]
}
