src/expr/snapshots/datafusion_delta_sharing__expr__test__not_op_from_expr.snap
---
source: src/expr/mod.rs
expression: parsed_op
---
{
  "op": "not",
  "children": [
    {
      "op": "isNull",
      "children": [
        {
          "op": "column",
          "name": "id",
          "valueType": "int"
        }
      ]
    }
  ]
}
